--- a/movies/src/app/pages/movielist/movielist.component.html
+++ b/movies/src/app/pages/movielist/movielist.component.html
@@ -4,14 +4,30 @@
   </div>
   <ul class="flex space-x-6">
     <li><a href="/home" class="hover:text-red-500">Home</a></li>
-    <li><a href="/movies" class="hover:text-red-500">Movies</a></li>
+    <li class="relative">
+     
+      <select
+        [(ngModel)]="selectedCategory"
+        (change)="filterMoviesByCategory()"
+        class="bg-gray-800 text-white p-0.1 rounded-md "
+        
+      >
+        <option value="">Movies</option>
+        <option value="Crime">Crime</option>
+        <option value="Horror">Horror</option>
+        <option value="Thriller">Thriller</option>
+        <option value="Romance">Romance</option>
+        <option value="Marvel">Marvel</option>
+      </select>
+    </li>
+
     <li><a href="/login" class="hover:text-red-500">Logout</a></li>
   </ul>
 </nav>
 
 <div class="flex space-x-4 p-4">
   <app-card
-    *ngFor="let movie of movies"
+    *ngFor="let movie of (filteredMovies.length?filteredMovies:movies)"
     [image_url]="movie.image_url"   
     [title]="movie.name"            
     [director]="movie.director"     
