--- a/movies/src/app/pages/movielist/movielist.component.html
+++ b/movies/src/app/pages/movielist/movielist.component.html
@@ -1,18 +1,23 @@
 <nav class="bg-gray-800 text-white p-4 flex justify-between items-center">
   <div class="text-lg font-bold">
-    <a href="/" class="hover:text-red-500">Movie App</a>
+    <a href="/movielist" class="hover:text-red-500">Movie App</a>
   </div>
   <ul class="flex space-x-6">
-    <li><a href="/home" class="hover:text-red-500">Home</a></li>
+    <li><a href="/login" class="hover:text-red-500">Logout</a></li>
+  </ul>
+</nav>
+<nav class="bg-gray-500 text-white p-2 flex justify-around">
+  <ul class="flex space-x-6 items-center">
+    <li><a href="#" class="hover:text-red-500">Rented</a></li>
+    <li><a href="#" class="hover:text-red-500">Language</a></li>
     <li class="relative">
      
       <select
         [(ngModel)]="selectedCategory"
         (change)="filterMoviesByCategory()"
-        class="bg-gray-800 text-white p-0.1 rounded-md "
-        
+        class="bg-gray-800 text-white p-0.1 rounded-md "    
       >
-        <option value="">Movies</option>
+        <option value="">Genre</option>
         <option value="Crime">Crime</option>
         <option value="Horror">Horror</option>
         <option value="Thriller">Thriller</option>
@@ -20,11 +25,8 @@
         <option value="Marvel">Marvel</option>
       </select>
     </li>
-
-    <li><a href="/login" class="hover:text-red-500">Logout</a></li>
   </ul>
 </nav>
-
 <div class="flex space-x-4 p-4">
   <app-card
     *ngFor="let movie of (filteredMovies.length?filteredMovies:movies)"
