--- a/movies/src/app/pages/movielist/movielist.component.html
+++ b/movies/src/app/pages/movielist/movielist.component.html
@@ -39,7 +39,7 @@
     class="bg-gray-800 text-white p-2 rounded-md w-48 ml-4"
     placeholder="Search Genre..."
   />
-  <ul *ngIf="searchTerm && filteredMovies.length > 0" class="absolute bg-gray-700 text-white w-full mt-2 p-2 rounded-md shadow-lg max-h-48 overflow-y-auto z-10">
+  <ul *ngIf="searchTerm && filteredMovies.length > 0" class="absolute bg-gray-700 text-white w-60 mt-2 p-2 rounded-md shadow-lg max-h-48 overflow-y-auto z-10">
     <li *ngFor="let movie of filteredMovies" class="hover:bg-red-600 p-2 cursor-pointer" (click)="selectMovie(movie)">  
       {{movie.name}}
     </li>
