--- a/movies/src/app/pages/moviedetail/moviedetail.component.html
+++ b/movies/src/app/pages/moviedetail/moviedetail.component.html
@@ -1,3 +1,11 @@
+<nav class="bg-gray-800 text-white p-4 flex justify-between items-center">
+  <div class="text-lg font-bold">
+    <a href="/movielist" class="hover:text-red-500">Movie App</a>
+  </div>
+  <ul class="flex space-x-6">
+    <li><a href="/" class="hover:text-red-500">Logout</a></li>
+  </ul>
+</nav>
 <div class="relative bg-black text-white min-h-screen">
     <!-- Movie Background Image -->
     <div class="absolute inset-0 z-0 bg-cover bg-center"
