added cards into movielist component

--- a/movies/src/app/pages/rented/rented.component.html
+++ b/movies/src/app/pages/rented/rented.component.html
@@ -3,12 +3,11 @@
     <a href="/movielist" class="hover:text-red-500">Movie App</a>
   </div>
   <ul class="flex space-x-6">
-    <li><a href="/rented" class="text-red-500">Rented</a></li>
     <li><a href="/" class="hover:text-red-500">Logout</a></li>
   </ul>
 </nav>
 
-<div class="p-4">
+<!-- <div class="p-4">
   <div *ngIf="rentedMovies && rentedMovies.length > 0; else noMovies">
     <div class="flex space-x-4 p-4">
       <app-card
@@ -20,7 +19,7 @@
         [image_url]="movie.image_url"
       ></app-card>
     </div>
-  </div>
+  </div> -->
 
   <!-- Fallback for no rented movies -->
   <ng-template #noMovies>
@@ -29,4 +28,4 @@
       <p class="text-gray-400">Browse the movie list and rent your favorite ones!</p>
     </div>
   </ng-template>
-</div>
+<!-- </div> -->
