--- a/movies/src/app/common/card/card.component.html
+++ b/movies/src/app/common/card/card.component.html
@@ -15,7 +15,7 @@
     <div class="px-6 pt-4 pb-2">
       <!-- Button -->
 
-      <button class="bg-red-600 text-white px-4 py-2 rounded-full hover:bg-red-700 transition duration-300 disabled:bg-gray-400" (click)="handleRentNowClick($event)" [disabled]="!isAvailable"
+      <button *ngIf="!isRentedPage" class="bg-red-600 text-white px-4 py-2 rounded-full hover:bg-red-700 transition duration-300 disabled:bg-gray-400" (click)="handleRentNowClick($event)" [disabled]="!isAvailable"
 
       >
         {{ isAvailable ? 'Rent Now' : 'Rented' }}
