--- a/movies/src/app/pages/movielist/movielist.component.html
+++ b/movies/src/app/pages/movielist/movielist.component.html
@@ -7,31 +7,26 @@
     <li><a href="/" class="hover:text-red-500">Logout</a></li>
   </ul>
 </nav>
-<!-- <nav class="bg-gray-500 text-white p-2 flex justify-around">
-  <ul class="flex space-x-6 items-center">
-    <li><a href="#" class="hover:text-red-500">Rented</a></li>
-    <li><a href="#" class="hover:text-red-500">Language</a></li>
-    <li class="relative">
 
-      <select
-        [(ngModel)]="selectedCategory"
-        (change)="filterMoviesByCategory()"
-        class="bg-gray-800 text-white p-0.1 rounded-md "
-      >
-        <option value="">Genre</option>
-        <option value="Crime">Crime</option>
-        <option value="Horror">Horror</option>
-        <option value="Thriller">Thriller</option>
-        <option value="Romance">Romance</option>
-        <option value="Marvel">Marvel</option>
-      </select>
-    </li>
-  </ul>
-</nav> -->
+<!-- <div class="relative mt-4">
+  <input
+    matInput
+    [(ngModel)]="searchTerm"
+    [matAutocomplete]="auto"
+
+    placeholder="Search for a genre"
+  />
+  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectMovie(movie)">
+    <mat-option *ngFor="let movie of filteredMovies" [value]="movie">
+      {{ movie.name }}
+    </mat-option>
+  </mat-autocomplete>
+</div> -->
+
 
 
 <div class="relative mt-4">
-  <!-- Genre Search Input -->
+  
   <input
     type="text"
     [(ngModel)]="searchTerm"
@@ -47,7 +42,7 @@
 </div>
 
 
-<div class="flex space-x-4 p-4">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4 p-4">
   <app-card
     *ngFor="let movie of (filteredMovies.length?filteredMovies:movies)"
     [image_url]="movie.image_url"
