--- a/movies/src/app/pages/rented/rented.component.html
+++ b/movies/src/app/pages/rented/rented.component.html
@@ -9,7 +9,7 @@
 
 <div class="p-4">
   <div *ngIf="rentedMovies && rentedMovies.length > 0; else noMovies">
-    <div class="flex space-x-4 p-4">
+    <!-- <div class="flex space-x-4 p-4">
       <app-card
         *ngFor="let movie of rentedMovies"
         [title]="movie.name"
@@ -18,7 +18,46 @@
         [cast]="movie.cast"
         [image_url]="movie.image_url"
       ></app-card>
+    </div> -->
+    <div class="table-container">
+      <table mat-table [dataSource]="dataSource" matSort>
+
+        <!-- ID Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="start_date">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Rented On </th>
+          <td mat-cell *matCellDef="let element"> {{element.start_date | date:'shortDate'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="end_date">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Available On </th>
+          <td mat-cell *matCellDef="let element"> {{element.end_date | date:'shortDate'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
+          <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="language">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Language </th>
+          <td mat-cell *matCellDef="let element"> {{element.language}} </td>
+        </ng-container>
+
+        <!-- Header Row -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <!-- Data Row -->
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      </table>
+
     </div>
+
+
   </div>
 
   <!-- Fallback for no rented movies -->
