--- a/movies/src/app/common/card/card.component.html
+++ b/movies/src/app/common/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="max-w-xs rounded overflow-hidden shadow-lg bg-gray-800 text-white" (click)="handleCardClick()">
     <!-- Card Image -->
-    <img class="w-full h-56 object-cover" [src]="image_url" alt="Movie Poster" />
+    <img class="w-full h-56 object-cover cursor-pointer" [src]="image_url" alt="Movie Poster" />
 
 
 
