--- a/movies/src/app/pages/rented/rented.component.html
+++ b/movies/src/app/pages/rented/rented.component.html
@@ -7,22 +7,12 @@
   </ul>
 </nav>
 
-<!-- <div class="p-4">
+<div class="p-4">
   <div *ngIf="rentedMovies && rentedMovies.length > 0; else noMovies">
-    <!-- <div class="flex space-x-4 p-4">
-      <app-card
-        *ngFor="let movie of rentedMovies"
-        [title]="movie.name"
-        [description]="movie.description"
-        [director]="movie.director"
-        [cast]="movie.cast"
-        [image_url]="movie.image_url"
-      ></app-card>
-    </div> -->
+   
     <div class="table-container">
       <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- ID Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -54,10 +44,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
       </table>
-
     </div>
-
-
   </div>
 
   <!-- Fallback for no rented movies -->
