--- a/movies/src/app/pages/movielist/movielist.component.html
+++ b/movies/src/app/pages/movielist/movielist.component.html
@@ -50,7 +50,7 @@
     [director]="movie.director"
     [cast]="movie.cast"
     [description]="movie.description"
-
+    [endDate]="movie.end_date"
     [movieId]="movie._id" 
     [isAvailable]="movie.availability"  
 
