--- a/movies/src/app/pages/rented/rented.component.html
+++ b/movies/src/app/pages/rented/rented.component.html
@@ -20,7 +20,7 @@
 
         <ng-container matColumnDef="start_date">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Rented On </th>
-          <td mat-cell *matCellDef="let element"> {{element.start_date | date:'shortDate'}} </td>
+          <td mat-cell *matCellDef="let element"> {{(element.start_date | date:'shortDate')?.trim()}} </td>
         </ng-container>
 
         <ng-container matColumnDef="end_date">
